<resources>
    <string name="facebook_app_id">670360463147665</string>
    <string name="app_name">PROMOSEE</string>
    <string name="facebook_url">https://www.facebook.com/angga.pratama.56</string>
    <string name="youtube_id">NZp_axebSfQ</string>
    <string name="twitter_profile">ma_pratama</string>
    <string name="instagram_profile">ma_pratama</string>
    <string name="email_contact_us">info@promosee.co.id</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="sign_in">Sign in</string>
    <string name="referral_code">Referral Code</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="description_login">Aplikasi yang memberikan info promo brand-brand pilihan kamu. Dapatkan seluruh promo dimana saja dan kapan saja. Berbelanja lewat voucher promo lebih hemat dan cermat</string>
    <string name="not_yet_registered">Not yet Registered ?</string>
    <string name="sign_up_with_facebook">Sign up with facebook</string>
    <string name="join_promosee">Join PROMOSEE</string>
    <string name="search">Search</string>
    <string name="search_voucher">Search Voucher</string>
    <string name="subscribe">Subscribe</string>
    <string name="vouchers">Vouchers</string>
    <string name="locations">Locations</string>
    <string name="category_vouchers">Category Vouchers</string>
    <string name="partner_promosee">Partner Promosee</string>
    <string name="news_and_events">News and Events</string>
    <string name="news">News</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="visit_us">Visit Us</string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="my_member_cards">My Membercards</string>
    <string name="add_member_cards">Add New Membercards</string>
    <string name="my_promosee_walet">My Promosee Wallet</string>
    <string name="redemption_history">Redemptions History</string>
    <string name="get_free_voucher">Get Free Voucher</string>
    <string name="payment_history">Payment History</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saldo_my_wallet">Saldo My Promosee Wallet</string>
    <string name="policy">Policy</string>
    <string name="term_condition">Term Condition</string>
    <string name="logout">Logout</string>
    <string name="buy_voucher">Buy Voucher</string>
    <string name="comment_hint">Tuliskan Komentar \/ Pertanyaan Anda Disini</string>
    <string name="send">Send</string>
    <string name="get_voucher">Get Voucher</string>
    <string name="view_locations">View Locations</string>
    <string name="redeem_voucher">Redeem Voucher</string>
    <string name="subscribe_desc">Silahkan pilih kategori voucher favoritmu (maksimal 2 kategori)</string>
    <string name="subs_info"><i>*Paket berlangganan akan segera otomatis diperpanjang di setiap bulan atau minggu sesuai paket yang dipilih</i></string>
    <string name="voucher_fab_desc">Redeem Voucher\nDi Lokasi Sekitarmu</string>
    <string name="search_fab_desc">Cari Voucher\nDi Lokasi Sekitarmu</string>
    <string name="error_load_map">Unable to load Maps. Please try again later</string>
    <string name="error_google_play_services">Unable to load Maps. Please check your google play services</string>
    <string name="error_get_current_location">Could not get your location. Make sure location is enabled on this device.</string>
    <string name="ignore_location_permission">Unable to detect your location, please enable Location Services in app settings.</string>
    <string name="ignore_camera_permission">Unable to open your camera, please enable Camera permission in app settings.</string>
    <string name="filter_category_header">Pilih kategori voucher</string>
    <string name="add_new_membercard">Sudah punya\nmembercard</string>
    <string name="online_membercard">Membercard tidak tersedia untuk merchant ini</string>
    <string name="follow">ikutan</string>
    <string name="member_cards">Membercards</string>
    <string name="valid_voucher">Tanggal berlaku voucher : </string>
    <string name="price">Harga : </string>
    <string name="topup_confirmation">Konfirmasi Top-up</string>
    <string name="list_location_header">Lokasi Toko Untuk Melakukan Redemption</string>
    <string name="redeem_info">Silahkan isi\nKode Admin Merchant</string>
    <string name="redeem_alert">*Kode ini diisi oleh merchant</string>
    <string name="send_code">Kirimkan kode ini</string>
    <string name="get_free_voucher_code">mt267yy</string>
    <string name="get_free_voucher_info">dan dapatkan kesempatan mendapatkan voucher e-commerce sebesar IDR 30.000 untuk kamu dan temanmu</string>
</resources>
