<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="matrix"
        android:src="@drawable/bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20sp">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <TextView
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_login"
                android:textAlignment="center"
                android:textColor="@color/White" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.6"
                android:background="@drawable/bg_edittext_normal"
                android:gravity="center"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/White" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.6"
                android:background="@drawable/bg_edittext_normal"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/White" />

            <Button
                android:id="@+id/signin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:alpha="0.6"
                android:background="@drawable/bg_button_normal"
                android:text="@string/sign_in"
                android:textColor="@color/White"
                android:textSize="17sp" />

            <TextView
                android:layout_marginTop="10sp"
                android:layout_marginRight="5sp"
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forget Password?"
                android:layout_gravity="right"
                android:textColor="@color/White" />

            <Button
                android:layout_marginTop="20sp"
                android:id="@+id/facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:background="@color/FacebookColor"
                android:drawableLeft="@drawable/layer_9"
                android:drawablePadding="6dp"
                android:padding="6dp"
                android:text="@string/sign_up_with_facebook" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/White"
                android:drawableLeft="@drawable/layer_10"
                android:drawablePadding="6dp"
                android:padding="6dp"
                android:text="@string/join_promosee" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>