<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    android:orientation="vertical">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5sp"
        android:textAllCaps="true"
        android:text="@string/register"
        android:textColor="@color/DarkRed"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ScrollView
        android:background="@color/White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="textCapWords"
                android:fontFamily="ubuntu-light"
                android:hint="@string/first_name"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/last_name_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="textCapWords"
                android:fontFamily="ubuntu-light"
                android:hint="@string/last_name"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/email_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="textEmailAddress"
                android:fontFamily="ubuntu-light"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/phone_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="number"
                android:fontFamily="ubuntu-light"
                android:hint="@string/phone"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/password_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:fontFamily="ubuntu-light"
                android:hint="@string/password"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/confirm_password_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="textPassword"
                android:fontFamily="ubuntu-light"
                android:hint="@string/confirm_password"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:id="@+id/city_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:inputType="textCapWords"
                android:fontFamily="ubuntu-light"
                android:hint="@string/city"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <EditText
                android:layout_marginTop="10sp"
                android:visibility="gone"
                android:id="@+id/referral_code_edittext"
                android:textColorHint="@color/LightRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_box_shadow"
                android:textSize="12sp"
                android:textAllCaps="true"
                android:fontFamily="ubuntu-light"
                android:hint="@string/referral_code"
                android:paddingLeft="10dp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/register_button"
                android:layout_marginTop="30dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="@color/White"
                android:background="@color/DarkRed"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>