<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LightGray"
    android:orientation="vertical">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="5sp"
        android:textAllCaps="true"
        android:text="@string/get_free_voucher"
        android:textColor="@color/DarkRed"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ScrollView
        android:background="@color/White"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_marginTop="20sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/circle"
                    android:tint="@color/LightGray"
                    android:layout_width="150sp"
                    android:layout_height="150sp" />

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/gift_icon"
                    android:tint="@color/LightRed"
                    android:layout_width="80sp"
                    android:layout_height="80sp" />

            </RelativeLayout>

            <TextView
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:textSize="17sp"
                android:textColor="@color/Black"
                android:text="@string/send_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/LightRed"
                android:text="@string/get_free_voucher_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:gravity="center"
                android:textSize="17sp"
                android:paddingLeft="30sp"
                android:paddingRight="30sp"
                android:textColor="@color/Black"
                android:text="@string/get_free_voucher_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/send_button"
                android:layout_marginTop="30dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="kirim"
                android:textColor="@color/White"
                android:background="@color/DarkRed"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

