<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30sp">

    <TextView
        android:padding="10sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@color/LightGray"
        android:text="@string/redeem_voucher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="20sp"
            android:textAllCaps="true"
            android:text="@string/redeem_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/LightRed"
            android:layout_marginTop="5sp"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/redeem_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/code"
            android:textColor="@color/DarkGray"
            android:hint="XXXXXXXX"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:inputType="textCapCharacters"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:background="@drawable/bg_box_shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submit_button"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="SUBMIT"
            android:textColor="@color/White"
            android:background="@color/DarkRed"/>

    </LinearLayout>


</LinearLayout>