<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350sp"
    android:layout_height="match_parent">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/photo"
        android:layout_width="350sp"
        android:layout_height="200sp" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_text"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/Gray"
                android:textSize="10sp"
                android:text="@string/valid_voucher"
                android:maxLines="1"
                android:layout_marginRight="3sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/valid_text"
                android:textColor="@color/LightRed"
                android:textSize="10sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/description_text"
            android:textColor="@color/DarkGray"
            android:textSize="12sp"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8sp"
        android:background="@color/Gray" />

    <LinearLayout
        android:layout_marginLeft="5sp"
        android:padding="10sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/code_text"
            android:textColor="@color/Gray"
            android:textSize="16sp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/price_text"
            android:textColor="@color/LightRed"
            android:textSize="16sp"
            android:layout_marginLeft="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8sp"
        android:background="@color/Gray" />

    <Button
        android:id="@+id/submit_button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/buy_voucher"
        android:textColor="@color/White"
        android:background="@color/DarkRed"/>

</LinearLayout>