<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:orientation="vertical">

    <include
        android:id="@id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LightGray"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5sp"
        android:textAllCaps="true"
        android:text="@string/news_and_events"
        android:textColor="@color/DarkRed"
        android:textSize="14dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/Black"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5sp"
                android:layout_centerInParent="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/DarkRed"
                    android:textSize="10sp"
                    android:textStyle="bold|italic"
                    android:text="@string/news"/>

                <TextView
                    android:layout_marginLeft="3sp"
                    android:id="@+id/user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Black"
                    android:textSize="10sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/description_text"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:gravity="left"
                android:textSize="12sp"
                android:layout_marginTop="5sp"
                android:padding="5dp" />

            <Button
                android:id="@+id/get_voucher_button"
                android:layout_marginTop="15dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/get_voucher"
                android:textColor="@color/White"
                android:background="@color/DarkRed"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>



